adding css files

--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<html lang="en"> <!--html tag-->
-<head>           <!--head tag-->
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Page</title>   <!--title tag-->
+    <title>Document</title>
+    <!-- <style>
+        h1{                                    
+            color: rgb(25, 25, 141);
+            border: 1px solid black;
+        }
+    </style> -->
+    <!--CSS used inside style tag targetting a particular tag name is known as internal/embedded CSS-->
+    <link rel="stylesheet" href="style.css"> <!--Providing CSS file link is known as external CSS-->
 </head>
-<body>           <!--body tag-->
-    <p>Hello Everyone</p>   <!--paragraph tag-->
-    <hr>
-    <p>Starting Website Development Code</p>
-    <pre>
-        Front End Languages:
-        HTML
-        CSS
-        JavaScript
-    </pre>
+<body>
+    <p style="border: 1px solid rebeccapurple; color: gray;">Dedicated computer science student with a strong foundation in Java programming and fullstack development. <br>
+       Eager to gain knowledge on real-world projects,contribute effectively to development teams,and pursue opportunities.
+       <!--CSS used inside a tag is known as inline CSS-->
+    </p>
+    <h1>Hello Everyone</h1>
+    <h1>Rakshith Here!</h1>
+    <h1>Java FullStack Developer</h1>
 </body>
-</html
+</html>
