adding javascript files

--- a/loops_js.html
+++ b/loops_js.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Code</title>
-    <!-- <script>
-        console.log("Hello Everyone");
-    </script> -->
-    <script src="/JavaScript/app.js"></script>
+    <title>Loops</title>
+    <script src="app7.js"></script>
 </head>
 <body>
     <h1>JavaScript - Scripting Programming Language</h1>
