--- a/conditions_practice_js.html
+++ b/conditions_practice_js.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Font Size</title>
-    <link rel="stylesheet" href="style11.css">
+    <title>Conditions Practice</title>
+    <script src="practice.js"></script>
 </head>
 <body>
-    <div class="main">
-        <p id="fp1">Hi I'm Rakshith</p>
-    </div>
+    <h1>JavaScript - Scripting Programming Language</h1>
 </body>
 </html>
